--- a/templates/index.html
+++ b/templates/index.html
@@ -732,6 +732,9 @@
                 <a href="#features">Features</a>
                 <a href="#howto">How to Use</a>
                 <a href="#faq">FAQ</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
+                <a href="/terms.html">Terms</a>
+                <a href="/contact.html">Contact</a>
             </div>
 
             <div class="footer-disclaimer">
