--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -256,7 +256,7 @@
 
     <div class="footer">
         <p>&copy; 2024-2025 TikTok Downloader. All rights reserved.</p>
-        <p><a href="/">Home</a> | <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms.html">Terms of Service</a> | <a href="/contact.html">Contact</a></p>
+        <p><a href="/">Home</a> | <a href="/privacy-policy">Privacy Policy</a> | <a href="/terms">Terms of Service</a> | <a href="/contact">Contact</a></p>
     </div>
 </body>
 </html>
